# ti-escolar

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_admins_grupos.py  0003_salas.py  0004_conhecimento_prompt.py  0005_alunos.py  0006_destinatario_entrega.py  0006_licenciamento_tenant.py  0007_auditoria.py  0007_ficha_financeira_tenant.py  0008_professores.py  0009_tenant_whatsapp.py  0010_template_content_sid.py  0011_tenant_telefone_contato.py  0012_respostas_rapidas.py  0013_avisos_temporizados.py  0014_solicitacoes_impressao.py  0015_mural_professor.py  0016_solicitacoes_internas.py  0017_mensagens_mediadas.py  0018_cota_impressao.py  (+4 more)
backend/app/: config.py  main.py  seed.py
backend/tests/: fakes.py  test_atender_conversa.py  test_auditoria.py  test_avisos.py  test_broadcast.py  test_cadastro_alunos.py  test_cadastro_cobertura.py  test_cadastro_pais_salas.py  test_cadastro_professores.py  test_canal_twilio.py  test_comunicacao_interna.py  test_conhecimento.py  test_cota_impressao.py  test_escolas.py  test_exportacao_conversa.py  test_falta_eventual.py  test_ficha_financeira.py  test_ficha_matricula.py  test_grupos_e_admin.py  test_importacao_alunos.py  test_impressao.py  test_licenciamento.py  test_limite_mensagem.py  test_matricula_selfservice.py  test_mediacao.py  test_mural.py  test_nao_entrega.py  test_openai_provider.py  test_progressao.py  test_receber_mensagem.py  test_responder_duvida.py  test_respostas_rapidas.py
(+131 files in other folders)
