[project]
name = "ti-escolar-backend"
version = "0.1.0"
description = "Back-end do TI-Escolar (FastAPI, arquitetura hexagonal, Postgres + pgvector)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "alembic>=1.13",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
llm = [
    "anthropic>=0.39",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
